fix sample code wrapping

--- a/blog-posts/stylesheets/blog.css
+++ b/blog-posts/stylesheets/blog.css
@@ -254,6 +254,7 @@ article .article_content {
 .code > span {
 	display: block;
 	line-height: 1.4em;
+	word-wrap: break-word;
 }
 
 /*footer*/
